--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int01/int01-1/int01-1-1/int01-1-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int01/int01-1/int01-1-1/int01-1-1.component.html
@@ -46,10 +46,7 @@
 
                 <div class="ui center aligned grid">
                     <div class="eight wide column">
-                        <button class="ui mini primary button">
-          <i class="add icon"></i>
-          สร้างกระดาษทำการ
-        </button>
+                        <a class="ui mini primary button" routerLink='/int01-1-2'><i class="add icon"></i>สร้างกระดาษทำการ</a>
                     </div>
                 </div>
             </div>
