--- a/workspace/ims-client/src/app/buckwaframework/project/pages/select-form/select-form.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/pages/select-form/select-form.component.html
@@ -105,7 +105,7 @@
                                                     <i class="file text outline icon"></i>
                                                     <div class="content">
                                                         <div class="header">
-                                                            <a href="javascript:;" routerLink="/select-new-form">กระดาษทำการตรวจสอบการลดหย่อนภาษี</a>
+                                                            กระดาษทำการตรวจสอบการลดหย่อนภาษี
                                                         </div>
                                                     </div>
                                                 </div>
@@ -115,7 +115,7 @@
                                                     <i class="file text outline icon"></i>
                                                     <div class="content">
                                                         <div class="header">
-                                                            <a href="javascript:;" routerLink="/select-new-form">กระดาษทำการตรวจสอบการส่งออก</a>
+                                                            กระดาษทำการตรวจสอบการส่งออก
                                                         </div>
                                                     </div>
                                                 </div>
@@ -125,7 +125,7 @@
                                                     <i class="file text outline icon"></i>
                                                     <div class="content">
                                                         <div class="header">
-                                                            <a href="javascript:;" routerLink="/select-new-form">กระดาษทำการตรวจสอบด้านราคา</a>
+                                                            กระดาษทำการตรวจสอบด้านราคา
                                                         </div>
                                                     </div>
                                                 </div>
@@ -135,7 +135,7 @@
                                                     <i class="file text outline icon"></i>
                                                     <div class="content">
                                                         <div class="header">
-                                                            <a href="javascript:;" routerLink="/select-new-form">ตารางการคำนวณภาษีที่ต้องชำระเพิ่ม</a>
+                                                            ตารางการคำนวณภาษีที่ต้องชำระเพิ่ม
                                                         </div>
                                                     </div>
                                                 </div>
@@ -153,7 +153,7 @@
                                                     <i class="file text outline icon"></i>
                                                     <div class="content">
                                                         <div class="header">
-                                                            <a href="javascript:;" routerLink="/select-new-form">กระดาษทำการตรวจสอบด้านปริมาณ</a>
+                                                            กระดาษทำการตรวจสอบด้านปริมาณ
                                                         </div>
                                                     </div>
                                                 </div>
@@ -163,7 +163,7 @@
                                                     <i class="file text outline icon"></i>
                                                     <div class="content">
                                                         <div class="header">
-                                                            <a href="javascript:;" routerLink="/select-new-form">กระดาษทำการตรวจสอบด้านราคา</a>
+                                                            กระดาษทำการตรวจสอบด้านราคา
                                                         </div>
                                                     </div>
                                                 </div>
@@ -173,7 +173,7 @@
                                                     <i class="file text outline icon"></i>
                                                     <div class="content">
                                                         <div class="header">
-                                                            <a href="javascript:;" routerLink="/select-new-form">กระดาษทำการตรวจสอบด้านมูลค่า</a>
+                                                            กระดาษทำการตรวจสอบด้านมูลค่า
                                                         </div>
                                                     </div>
                                                 </div>
@@ -183,7 +183,7 @@
                                                     <i class="file text outline icon"></i>
                                                     <div class="content">
                                                         <div class="header">
-                                                            <a href="javascript:;" routerLink="/select-new-form">กระดาษาทำการตรวจสอบสถานะสมาชิก</a>
+                                                            กระดาษาทำการตรวจสอบสถานะสมาชิก
                                                         </div>
                                                     </div>
                                                 </div>
@@ -193,7 +193,7 @@
                                                     <i class="file text outline icon"></i>
                                                     <div class="content">
                                                         <div class="header">
-                                                            <a href="javascript:;" routerLink="/select-new-form">กระดาษทำการตรวจนับสินค้าคงเหลือ</a>
+                                                            กระดาษทำการตรวจนับสินค้าคงเหลือ
                                                         </div>
                                                     </div>
                                                 </div>
@@ -203,7 +203,7 @@
                                                     <i class="file text outline icon"></i>
                                                     <div class="content">
                                                         <div class="header">
-                                                            <a href="javascript:;" routerLink="/select-new-form">ตารางการคำนวณภาษีที่ต้องชำระเพิ่ม</a>
+                                                            ตารางการคำนวณภาษีที่ต้องชำระเพิ่ม
                                                         </div>
                                                     </div>
                                                 </div>
@@ -302,7 +302,7 @@
                                     3
                                 </td>
                                 <td>
-                                    <a href="javascript:;" routerLink="/create-form"> กระดาษทำการตรวจนับสินค้าสำเร็จรูปคงเหลือ </a>
+                                    <a href="javascript:;"> กระดาษทำการตรวจนับสินค้าสำเร็จรูปคงเหลือ </a>
                                 </td>
                             </tr>
                         </tbody>
