add new create-paper-check-value page

--- a/workspace/ims-client/src/app/buckwaframework/project/pages/select-form/select-form.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/pages/select-form/select-form.component.html
@@ -173,7 +173,7 @@
                                                     <i class="file text outline icon"></i>
                                                     <div class="content">
                                                         <div class="header">
-                                                            กระดาษทำการตรวจสอบด้านมูลค่า
+                                                                <a href="javascript:;" routerLink="/create-paper-check-value">กระดาษทำการตรวจสอบด้านมูลค่า</a>
                                                         </div>
                                                     </div>
                                                 </div>
