--- a/workspace/ims-client/src/app/buckwaframework/project/pages/create-paper-check-value/create-paper-check-value.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/pages/create-paper-check-value/create-paper-check-value.component.html
@@ -1,3 +1,285 @@
-<p>
-  create-paper-check-value works!
-</p>
+<div class="ui grid">
+  <div class="sixteen wide column">
+    <h2 class="ui header">สร้างกระดาษทำการตรวจสอบด้านมูลค่า</h2>
+
+    <div class="ui top attached header">
+      <span>Criteria</span>
+    </div>
+
+    <div class="ui attached segment">
+      <div class="ui form">
+        <div class="inline fields">
+          <div class="eight wide field ">
+            <label class="custom-label-w-25">ทะเบียนสรรพสามิต</label>
+            <input type="text" class="custom-readonly" placeholder="ทะเบียนสรรพสามิต" readonly="" value="2560-00178-5">
+          </div>
+          <div class="eight wide field ">
+            <label class="custom-label-w-20">เลขประจำตัวผู้เสียภาษี</label>
+            <input type="text" class="custom-readonly" placeholder="เลขประจำตัวผู้เสียภาษี" readonly="" value="1-5599-00168-99-6">
+          </div>
+        </div>
+
+        <div class="inline fields">
+          <div class="eight wide field">
+            <label class="custom-label-w-25">ผู้ประกอบการ </label>
+            <input type="text" class="custom-readonly" placeholder="ผู้ประกอบการ" readonly="" value="บ. ฮอนด้า มอเตอร์ ประเทศไทย">
+          </div>
+          <div class="eight wide field ">
+            <label class="custom-label-w-20">เลขที่วิเคราะห์</label>
+            <input type="text" class="custom-readonly" placeholder="เลขที่วิเคราะห์" readonly="" value="256000000001">
+          </div>
+        </div>
+
+        <div class="inline fields">
+          <div class="eight wide field required">
+            <label class="custom-label-w-25">รอบระยะเวลาการตรวจสอบ</label>
+            <div class="eight wide field">
+              <div class="ui icon input">
+                <input type="text" class="custom-readonly" placeholder="MM/YYYY" value="11/2560" readonly="">
+                <i class="add to calendar icon"></i>
+              </div>
+            </div>
+            <div class="eight wide field">
+              <label>-</label>
+              <div class="ui icon input">
+                <input type="text" class="custom-readonly" placeholder="MM/YYYY" value="11/2560" readonly="">
+                <i class="add to calendar icon"></i>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="ui top attached header">
+      <span>อัพโหลด Template ข้อมูลการตรวจสอบด้านมูลค่า</span>
+    </div>
+
+    <div class="ui attached segment">
+      <div class="ui form">
+        <div class="inline fields">
+          <div class="eight wide field ">
+            <label class="custom-label-w-25">เลือกไฟล์ Template ข้อมูล</label>
+            <input type="file" />
+          </div>
+        </div>
+      </div>
+
+      <div class="ui center aligned grid">
+        <div class="four wide column">
+          <button class="ui mini primary button" (click)="uploadData()">
+            <i class="upload icon"></i>
+            อัพโหลด
+          </button>
+          <button class="ui mini button" (click)="clearData()">
+            <i class="trash outline icon"></i>
+            ลบไฟล์
+          </button>
+        </div>
+      </div>
+    </div>
+
+    <div class="ui segment" *ngIf="showData">
+      <div class="ui grid center aligned">
+        <div class="sixteen wide column">
+          บ. ฮอนด้า มอเตอร์ ประเทศไทย
+          <br> กระดาษทำการตรวจสอบด้านมูลค่า
+          <br> เดือน พ.ย. 2559 - ส.ค. 2559
+        </div>
+      </div>
+      <br>
+      <div style="overflow-x: scroll">
+        <table class="ui small celled table" style="width: 200%">
+          <thead>
+            <tr style="text-align: center;">
+              <th rowspan="2">ลำดับ</th>
+              <th rowspan="2">เดือน</th>
+              <th rowspan="2">รายการ</th>
+              <th rowspan="2">แบบรายการภาษี
+                <br>ภส.03 - 08</th>
+              <th rowspan="2">ใบกำกับภาษี/ใบเสร็จรับเงิน</th>
+              <th rowspan="2">บัญชีประจำวันแสดงรายการรับค่าบริการ
+                <br>ภส.07 - 05</th>
+              <th rowspan="2">ใบนำส่งเงิน</th>
+              <th rowspan="2">ใบ Order</th>
+              <th rowspan="2">รายงานภาษีขาย</th>
+              <th rowspan="2">แบบภาษีมูลค่าเพิ่ม ภส.30</th>
+              <th rowspan="2">งบเดือนกิจการสถานประกอบการ</th>
+              <th colspan="7">ผลต่าง</th>
+            </tr>
+            <tr style="text-align: center;">
+              <th style="border-left: 1px solid rgba(34,36,38,.1);">(1) - (2)</th>
+              <th>(1) - (3)</th>
+              <th>(1) - (4)</th>
+              <th>(1) - (5)</th>
+              <th>(1) - (6)</th>
+              <th>(1) - (7)</th>
+              <th>(1) - (8)</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>1</td>
+              <td>พ.ค. 2559</td>
+              <td>ค่าอาหารและเครื่องดื่ม</td>
+              <td> 1,249,168.24 </td>
+              <td> 1,269,168.24 </td>
+              <td> 1,269,168.24 </td>
+              <td> 1,269,168.24 </td>
+              <td>0</td>
+              <td> 1,569,168.24 </td>
+              <td>1269168.24</td>
+              <td>1269168.24</td>
+              <td>
+                <span class="ui red horizontal label right aligned" style="float: right;">20,000.00</span>
+              </td>
+              <td>
+                <span class="ui red horizontal label right aligned" style="float: right;">20,000.00</span>
+              </td>
+              <td>
+                <span class="ui red horizontal label right aligned" style="float: right;">20,000.00</span>
+              </td>
+              <td>
+                <span class="ui green horizontal label right aligned" style="float: right;">-</span>
+              </td>
+              <td>
+                <span class="ui red horizontal label right aligned" style="float: right;">320,000.00</span>
+              </td>
+              <td>
+                <span class="ui red horizontal label right aligned" style="float: right;">20,000.00</span>
+              </td>
+              <td>
+                <span class="ui red horizontal label right aligned" style="float: right;">20,000.00</span>
+              </td>
+            </tr>
+            <tr>
+              <td>2</td>
+              <td>มิ.ย. 2559</td>
+              <td>ค่าอาหารและเครื่องดื่ม</td>
+              <td> 1,140,392.32 </td>
+              <td> 1,140,392.32 </td>
+              <td> 1,140,392.32 </td>
+              <td> 1,140,392.32 </td>
+              <td>0</td>
+              <td> 1,150,392.32 </td>
+              <td>1140392.32</td>
+              <td>1140392.32</td>
+              <td>
+                <span class="ui green horizontal label right aligned" style="float: right;">-</span>
+              </td>
+              <td>
+                <span class="ui green horizontal label right aligned" style="float: right;">-</span>
+              </td>
+              <td>
+                <span class="ui green horizontal label right aligned" style="float: right;">-</span>
+              </td>
+              <td>
+                <span class="ui green horizontal label right aligned" style="float: right;">-</span>
+              </td>
+              <td>
+                <span class="ui red horizontal label right aligned" style="float: right;">10,000.00</span>
+              </td>
+              <td>
+                <span class="ui green horizontal label right aligned" style="float: right;">-</span>
+              </td>
+              <td>
+                <span class="ui green horizontal label right aligned" style="float: right;">-</span>
+              </td>
+            </tr>
+            <tr>
+              <td>3</td>
+              <td>ก.ค. 2559</td>
+              <td>ค่าอาหารและเครื่องดื่ม</td>
+              <td> 1,943,302.11 </td>
+              <td> 2,143,302.11 </td>
+              <td> 2,143,302.11 </td>
+              <td> 2,143,302.11 </td>
+              <td>0</td>
+              <td> 2,147,302.11 </td>
+              <td>2143302.11</td>
+              <td>2143302.11</td>
+              <td>
+                <span class="ui red horizontal label right aligned" style="float: right;">200,000.00</span>
+              </td>
+              <td>
+                <span class="ui red horizontal label right aligned" style="float: right;">200,000.00</span>
+              </td>
+              <td>
+                <span class="ui red horizontal label right aligned" style="float: right;">200,000.00</span>
+              </td>
+              <td>
+                <span class="ui green horizontal label right aligned" style="float: right;">-</span>
+              </td>
+              <td>
+                <span class="ui red horizontal label right aligned" style="float: right;">200,000.00</span>
+              </td>
+              <td>
+                <span class="ui red horizontal label right aligned" style="float: right;">200,000.00</span>
+              </td>
+              <td>
+                <span class="ui red horizontal label right aligned" style="float: right;">200,000.00</span>
+              </td>
+            </tr>
+            <tr>
+              <td>4</td>
+              <td>ส.ค. 2559</td>
+              <td>ค่าอาหารและเครื่องดื่ม</td>
+              <td> 1,234,022.54 </td>
+              <td> 1,234,022.54 </td>
+              <td> 1,234,022.54 </td>
+              <td> 1,234,022.54 </td>
+              <td>0</td>
+              <td> 1,234,022.54 </td>
+              <td>1234022.54</td>
+              <td>1234022.54</td>
+              <td>
+                <span class="ui green horizontal label right aligned" style="float: right;">-</span>
+              </td>
+              <td>
+                <span class="ui green horizontal label right aligned" style="float: right;">-</span>
+              </td>
+              <td>
+                <span class="ui green horizontal label right aligned" style="float: right;">-</span>
+              </td>
+              <td>
+                <span class="ui green horizontal label right aligned" style="float: right;">-</span>
+              </td>
+              <td>
+                <span class="ui green horizontal label right aligned" style="float: right;">-</span>
+              </td>
+              <td>
+                <span class="ui green horizontal label right aligned" style="float: right;">-</span>
+              </td>
+              <td>
+                <span class="ui green horizontal label right aligned" style="float: right;">-</span>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+      <br>
+      <div class="ui center aligned grid">
+        <div class="six wide column">
+          <button class="ui mini primary button">
+            <i class="print icon"></i>
+            พิมพ์กระดาษทำการ
+          </button>
+          <button class="ui mini button" (click)="clearData()">
+            <i class="refresh icon"></i>
+            ล้างข้อมูล
+          </button>
+        </div>
+      </div>
+    </div>
+
+    <br>
+    <div class="ui grid center aligned">
+      <div class="sixteen wide column">
+        <button class="ui mini button" routerLink="/select-form">
+          <i class="arrow left icon"></i>
+          ย้อนกลับ
+        </button>
+      </div>
+    </div>
+  </div>
+</div>
