--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-1/int08-1-1/int08-1-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-1/int08-1-1/int08-1-1.component.html
@@ -287,7 +287,7 @@
     <div class="ui form">
       <div class="inline fields">
         <div class="four wide field">
-          <label class="custom-label-w-10">เงื่อนไขที่ 1</label>
+          <label style="width: 9em;">เงื่อนไขที่ 1</label>
           <select id="select1" class="ui dropdown">
             <option value="0">Less Than</option>
             <option value="1">Between</option>
@@ -298,20 +298,20 @@
           <input type="text" value="5,000,000">
         </div>
         <div class="one wide field"></div>
-        <div class="three wide field"></div>
+        <div class="two wide field"></div>
         <div class="three wide field">
-          <label class="custom-label-w-25">กำหนดค่าเป็น</label>
+          <label class="custom-label-w-35">กำหนดค่าเป็น</label>
           <input type="text" value="1">
         </div>
-        <div class="three wide field">
-          <label class="custom-label-w-25">กำหนดค่าเป็น</label>
+        <div class="four wide field">
+          <label class="custom-label-w-15">กำหนดค่าเป็น</label>
           <input type="text" value="ต่ำ">
         </div>
       </div>
 
       <div class="inline fields">
         <div class="four wide field">
-          <label class="custom-label-w-10">เงื่อนไขที่ 2</label>
+          <label style="width: 9em;">เงื่อนไขที่ 2</label>
           <select id="select2" class="ui dropdown">
             <option value="0">Between</option>
             <option value="1">Less Than</option>
@@ -324,22 +324,22 @@
         <div class="one wide field">
           <strong>&nbsp;&nbsp;&nbsp;ถึง</strong>
         </div>
-        <div class="three wide field">
+        <div class="two wide field">
           <input type="text" value="15,000,000">
         </div>
         <div class="three wide field">
-          <label class="custom-label-w-25">กำหนดค่าเป็น</label>
+          <label class="custom-label-w-35">กำหนดค่าเป็น</label>
           <input type="text" value="2">
         </div>
-        <div class="three wide field">
-          <label class="custom-label-w-25">กำหนดค่าเป็น</label>
+        <div class="four wide field">
+          <label class="custom-label-w-15">กำหนดค่าเป็น</label>
           <input type="text" value="กลาง">
         </div>
       </div>
 
       <div class="inline fields">
         <div class="four wide field">
-          <label class="custom-label-w-10">เงื่อนไขที่ 3</label>
+          <label style="width: 9em;">เงื่อนไขที่ 3</label>
           <select id="select3" class="ui dropdown">
             <option value="0">More Than</option>
             <option value="1">Between</option>
@@ -350,13 +350,13 @@
           <input type="text" value="50,000,000">
         </div>
         <div class="one wide field"></div>
-        <div class="three wide field"></div>
+        <div class="two wide field"></div>
         <div class="three wide field">
-          <label class="custom-label-w-25">กำหนดค่าเป็น</label>
+          <label class="custom-label-w-35">กำหนดค่าเป็น</label>
           <input type="text" value="3">
         </div>
-        <div class="three wide field">
-          <label class="custom-label-w-25">กำหนดค่าเป็น</label>
+        <div class="four wide field">
+          <label class="custom-label-w-15">กำหนดค่าเป็น</label>
           <input type="text" value="สูง">
         </div>
       </div>
@@ -366,7 +366,7 @@
 
   <div class="actions">
     <div class="ui center aligned grid">
-      <div class="six wide column">
+      <div class="sixteen wide column">
         <button class="ui mini primary button width-100">
           <i class="add icon"></i>
           เพิ่ม
