--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-1/int08-1-2/int08-1-2.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-1/int08-1-2/int08-1-2.component.html
@@ -269,7 +269,7 @@
 
   <div class="actions">
     <div class="ui center aligned grid">
-      <div class="six wide column">
+      <div class="sixteen wide column">
         <button class="ui mini primary button width-100">
           <i class="add icon"></i>
           เพิ่ม
