--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int01/int01-1/int01-1-1/int01-1-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int01/int01-1/int01-1-1/int01-1-1.component.html
@@ -1,6 +1,6 @@
 <div class="ui grid">
     <div class="sixteen wide column">
-        <h2 class="ui header">ภาษีสรรพสามิต และรายได้อื่นๆ</h2>
+        <h2 class="ui header">สร้างกระดาษทำการ ภาษีสรรพสามิต</h2>
 
         <div class="ui top attached header">
             <span>ข้อมูลกระดาษทำการ ภาษีสรรพสามิต</span>
