--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int01/int01-1/int01-1-3/int01-1-3.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int01/int01-1/int01-1-3/int01-1-3.component.html
@@ -1,3 +1,106 @@
-<p>
-  int01-1-3 works!
-</p>
+<div class="ui grid">
+    <div class="sixteen wide column">
+        <h2 class="ui header">ตรวจสอบงบสรุปยอดภาษี</h2>
+
+        <div class="ui top attached header">
+            <span>งบสรุปยอดภาษีสรรพสามิต</span>
+        </div>
+
+        <div class="ui attached segment">
+            <table>
+                <thead>
+                    <tr>
+                        <th>สินค้า/บริการ</th>
+                        <th>จำนวนใบเสร็จ</th>
+                        <th>จำนวนเงิน</th>
+                        <th>มหาดไทย<br/>10%</th>
+                        <th>นำส่งมหาดไทย<br/>95%</th>
+                        <th>เงินฝาก/ค่าใช้จ่าย<br/>5%</th>
+                        <th>ชดเชย 0.75%</th>
+                        <th>ค่าพิมพ์แสตมป์ 1%</th>
+                        <th>นำส่ง</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>ภาษีสถานอาบน้ำหรืออบตัวและนวด</td>
+                        <td>6</td>
+                        <td>38,747.83</td>
+                        <td>3,874.78</td>
+                        <td>3,681.03</td>
+                        <td>193.75</td>
+                        <td>290.61</td>
+                        <td>-</td>
+                        <td>38,457.22</td>
+                    </tr>
+                    <tr>
+                        <td>ภาษีเครื่องหอมและเครื่องสำอาง</td>
+                        <td>20</td>
+                        <td>3,918.05</td>
+                        <td>391.79</td>
+                        <td>372.16</td>
+                        <td>19.63</td>
+                        <td>29.42</td>
+                        <td>-</td>
+                        <td>3,888.63</td>
+                    </tr>
+                    <tr>
+                        <td>ภาษีสนามกอล์ฟ</td>
+                        <td>1</td>
+                        <td>855.14</td>
+                        <td>85.51</td>
+                        <td>81.23</td>
+                        <td>4.28</td>
+                        <td>6.41</td>
+                        <td>-</td>
+                        <td>848.73</td>
+                    </tr>
+                    <tr>
+                        <td>ภาษีสุราแช่ชุมชน</td>
+                        <td>1</td>
+                        <td>1,275.00</td>
+                        <td>127.5</td>
+                        <td>121.12</td>
+                        <td>6.38</td>
+                        <td>9.56</td>
+                        <td>12.75</td>
+                        <td>1,252.69</td>
+                    </tr>
+                    <tr>
+                        <td>ภาษีเครื่องดื่ม</td>
+                        <td>1</td>
+                        <td>111.93</td>
+                        <td>11.19</td>
+                        <td>10.63</td>
+                        <td>0.56</td>
+                        <td>0.84</td>
+                        <td>-</td>
+                        <td>111.09</td>
+                    </tr>
+                    <tr>
+                        <td>ภาษีไนท์คลับและดิสโก้เธค</td>
+                        <td>4</td>
+                        <td>62,836.29</td>
+                        <td>6,283.62</td>
+                        <td>5,969.42</td>
+                        <td>314.2</td>
+                        <td>471.28</td>
+                        <td>-</td>
+                        <td>62,365.01</td>
+                    </tr>
+                    <tr>
+                        <td>รวม</td>
+                        <td>33</td>
+                        <td>107,744.24</td>
+                        <td>10,774.39</td>
+                        <td>10,235.59</td>
+                        <td>538.80</td>
+                        <td>808.12</td>
+                        <td>12.75</td>
+                        <td>106,923.37</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+</div>
