--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-1/int08-1-1/int08-1-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-1/int08-1-1/int08-1-1.component.html
@@ -17,7 +17,7 @@
       </div>
 
       <div class="ui center aligned grid">
-        <div class="four wide column">
+        <div class="sixteen wide column">
           <button class="ui mini primary button" (click)="uploadData()">
             <i class="upload icon"></i>
             อัพโหลด
