--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-1/int08-1-2/int08-1-2.component.css
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-1/int08-1-2/int08-1-2.component.css
@@ -1,3 +1,7 @@
-tr td:nth-child(1), td:nth-child(4), td:nth-child(5), td:nth-child(6) {
+tr td:nth-child(1) {
+    text-align: right;
+}
+
+tr td:nth-child(4), td:nth-child(5), td:nth-child(6) {
     text-align: center;
 }
