update content mock up page 1,2

--- a/workspace/ims-client/src/app/buckwaframework/project/pages/analysis/analysis.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/pages/analysis/analysis.component.html
@@ -38,6 +38,26 @@
                     </div>
                 </div>
 
+                <div class="inline fields">
+                    <div class="eight wide field required">
+                        <label class="custom-label-w-25">ประเภท</label>
+                        <select id="selectCatagory" class="ui dropdown" (change)="selectCatagory()">
+                            <option value="0">- เลือกประเภท -</option>
+                            <option value="1">สินค้า</option>
+                            <option value="2">บริการ</option>
+                        </select>
+                    </div>
+                </div>
+
+                <div class="inline fields" *ngIf="showSelectCoordinate">
+                    <div class="eight wide field required">
+                        <label class="custom-label-w-25">พิกัด</label>
+                        <select class="ui dropdown">
+                            <option *ngFor="let item of coordinateList; index as i;" value="{{i}}">{{item.value}}</option>
+                        </select>
+                    </div>
+                </div>
+
                 <div class="fields">
                     <div class="sixteen wide field">
                         <div class="ui grid">
