--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int01/int01-1/int01-1-2/int01-1-2.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int01/int01-1/int01-1-2/int01-1-2.component.html
@@ -251,7 +251,7 @@
                             <td>สุราแช่</td>
                             <td>03/10/59</td>
                             <td>37311</td>
-                            <td>00026</td>
+                            <td>00001</td>
                             <td class="right aligned">1,275.00</td>
                             <td class="right aligned">121.12</td>
                             <td class="right aligned">6.38</td>
@@ -265,7 +265,7 @@
                             <td>สสสสุรา</td>
                             <td>03/10/59</td>
                             <td>37312</td>
-                            <td>00027</td>
+                            <td>00002</td>
                             <td class="right aligned">25.50</td>
                             <td class="right aligned">-</td>
                             <td class="right aligned">-</td>
@@ -278,8 +278,8 @@
                         <tr>
                             <td>สสทสุรา</td>
                             <td>03/10/59</td>
-                            <td>37313</td>
-                            <td>00028</td>
+                            <td class="bg-row-highlight">37313</td>
+                            <td>00003</td>
                             <td class="right aligned">18.83</td>
                             <td class="right aligned">18.55</td>
                             <td class="right aligned">0.28</td>
@@ -292,8 +292,8 @@
                         <tr>
                             <td>กกทสุรา</td>
                             <td>03/10/59</td>
-                            <td>37314</td>
-                            <td>00029</td>
+                            <td class="bg-row-highlight">37315</td>
+                            <td>00004</td>
                             <td class="right aligned">25.50</td>
                             <td class="right aligned">-</td>
                             <td class="right aligned">-</td>
@@ -306,8 +306,8 @@
                         <tr>
                             <td>อาบน้ำ</td>
                             <td>03/10/59</td>
-                            <td>37315</td>
-                            <td>00001</td>
+                            <td>37316</td>
+                            <td>00005</td>
                             <td class="right aligned">50.00</td>
                             <td class="right aligned">4.75</td>
                             <td class="right aligned">0.25</td>
@@ -320,8 +320,8 @@
                         <tr>
                             <td>เครื่องหอม</td>
                             <td>04/10/59</td>
-                            <td>37316</td>
-                            <td>00002</td>
+                            <td>37317</td>
+                            <td>00006</td>
                             <td class="right aligned">180</td>
                             <td class="right aligned">17.1</td>
                             <td class="right aligned">0.9</td>
@@ -334,8 +334,8 @@
                         <tr>
                             <td>เครื่องหอม</td>
                             <td>05/10/59</td>
-                            <td>37317</td>
-                            <td>00003</td>
+                            <td>37318</td>
+                            <td>00007</td>
                             <td class="right aligned">270</td>
                             <td class="right aligned">25.65</td>
                             <td class="right aligned">1.35</td>
@@ -348,8 +348,8 @@
                         <tr>
                             <td>ไนต์คลับฯ</td>
                             <td>05/10/59</td>
-                            <td>37318</td>
-                            <td>00004</td>
+                            <td>37319</td>
+                            <td class="bg-row-highlight">00008</td>
                             <td class="right aligned">1,826.80</td>
                             <td class="right aligned">173.54</td>
                             <td class="right aligned">9.14</td>
@@ -362,8 +362,8 @@
                         <tr>
                             <td>เครื่องหอม</td>
                             <td>05/10/59</td>
-                            <td>37319</td>
-                            <td>00005</td>
+                            <td>37320</td>
+                            <td class="bg-row-highlight">00010</td>
                             <td class="right aligned">171</td>
                             <td class="right aligned">16.24</td>
                             <td class="right aligned">0.86</td>
@@ -376,8 +376,8 @@
                         <tr>
                             <td>เครื่องดื่ม</td>
                             <td>07/10/59</td>
-                            <td>37320</td>
-                            <td>00006</td>
+                            <td>37321</td>
+                            <td>00011</td>
                             <td class="right aligned">111.93</td>
                             <td class="right aligned">10.63</td>
                             <td class="right aligned">0.56</td>
