add new int01-2 pages

--- a/workspace/ims-client/src/app/app.component.html
+++ b/workspace/ims-client/src/app/app.component.html
@@ -12,7 +12,7 @@
                     <i class="dropdown icon"></i> ตรวจสอบใบเสร็จ
                     <div class="menu">
                         <a class="item" [routerLink]="['/int01-1-1']" routerLinkActive="active">ภาษีสรรพสามิต และรายได้อื่นๆ</a>
-                        <a class="item" [routerLink]="['/check-receipt-license']" routerLinkActive="active">ใบอนุญาต</a>
+                        <a class="item" [routerLink]="['/int01-2-1']" routerLinkActive="active">ใบอนุญาต</a>
                     </div>
                 </div>
                 <a class="item" [routerLink]="['/2']" routerLinkActive="active">ตรวจสอบการนำส่งรายได้</a>
